// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwitterDescription matches the snapshot for the summary card 1`] = `
.c0 {
  font-size: 14px;
  max-height: 55px;
  line-height: 18px;
  overflow: hidden;
  margin: 0;
  margin-bottom: 2px;
  width: 357px;
  color: rgb(101,119,134);
}

<p
  className="c0"
/>
`;

exports[`TwitterDescription matches the snapshot for the summary with large image card 1`] = `
.c0 {
  font-size: 14px;
  max-height: 36px;
  line-height: 18px;
  overflow: hidden;
  margin: 0;
  margin-bottom: 2px;
  width: 476px;
  color: rgb(101,119,134);
}

<p
  className="c0"
/>
`;
